--- a/mtg-collection/src/App.css
+++ b/mtg-collection/src/App.css
@@ -16,19 +16,21 @@
 }
 
 body {
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 1em;
+  background-color: rgb(58, 58, 58);
+  
 }
 
 .container {
+  max-width: 1200px; 
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 85%;
   margin:auto;
-  border: solid 4px black;
   border-radius: 4px;
-  background-color: grey;
+  background-color: rgb(58, 58, 58);
   padding: 16px;
 }
 
@@ -78,21 +80,95 @@ body {
   gap: 10px;
 }
 
-.hero,
+.hero, .search-cards-section,
 .main-content {
-  border: solid 4px rgba(255, 255, 255, 0.219);
+  border: solid 4px #F7C873;
   border-radius: 6px;
-  background-color: rgba(170, 138, 106, 0.781);
+  background-color: rgba(116, 44, 44, 0.781);
   color: white;
   text-align: center;
   padding: 10px;
   margin-top: 20px;
+  width: 100%;
+}
 
+.main-content-container {
+  display: flex;
+}
+
+.search-cards-section, .search-cards-checkbox, .search-cards-input-section {
+  display: flex;
+  flex-direction: column;
+}
+
+.search-cards-checkbox-container {
+  display: flex; 
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.search-color-element {
+  
+  padding: 5px 7px;
+  margin: 10px 30px;
+  width: 200px;
+  background-color: rgb(58, 58, 58);
+  border: 3px solid #F7C873;
+  border-radius: 6px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+span img {
+  width: 17px;
+}
+
+.search-color-element label {
+  color: white;
+  margin: 0 10px;
+  display: flex;
+}
+
+.checkbox-description {
+  display: flex;
+}
+
+article > input {
+  width: 17px;
+  height: 17px;
+  border-radius: 100%;
+  align-self: center;
 }
 
 
-.hero h1 {
+
+.hero h1, .search-cards-section h3 {
+  margin: 0;
+  font-size: 70px;
+  font-family: 'Jolly Lodger', sans-serif;
+  color: white;
+}
+
+.search-cards-input {
+  outline: none;
+  width: 70%;
+  height: 40px;
+  border-radius: 6px;
+  border: solid 4px #F7C873;
+  background-color: #F7C873;
+  align-self: center;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.search-cards-label {
+  color: white;
   margin: 10px;
+  text-align: left;
+  padding-left: 100px;
+  font-weight: bold;
+
 }
 
 .my-collection-container {
@@ -105,11 +181,12 @@ body {
 
 .sidebar {
   
-  
+  width: 30%;
   background-color: white;
   display: flex;
-  
-  
+  border: solid 4px rgba(170, 138, 106, 0.781);
+  border-radius: 5px;
+  margin: 10px; 
 }
 
 .sidebar-filters {
@@ -117,7 +194,6 @@ body {
   flex-direction: column;
   justify-content: center;
   margin: 10px;
-  
 }
 
 .sidebar-filters form {
@@ -138,8 +214,24 @@ h3 {
   padding: 10px;
 }
 
+.search-for-color label, input{
+  display: block;
+  
+}
+
 .search-for-color h3 {
   color: rgba(133, 74, 47, 0.63);
+  margin-bottom: 15px;
+}
+
+.search-for-color div {
+  display: flex;
+  justify-content: center;
+  
+}
+
+.search-for-color label {
+  margin-right: 10px;
 }
 
 section label {
