--- a/mtg-collection/src/App.css
+++ b/mtg-collection/src/App.css
@@ -80,6 +80,83 @@ body {
   gap: 10px;
 }
 
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  display: flex;
+  height: 70px;
+  background-color:rgba(116, 44, 44, 0.781);
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  border-bottom: solid 4px #F7C873;
+}
+
+
+
+.navbar-home {
+  display: flex;
+}
+
+.navbar .navbar-icon {
+  width: 40px;
+  color: white;
+}
+
+ .navbar a {
+  display: flex;
+  color: white;
+  font-size: 20px;
+  gap: 10px;
+  width: 80%;
+  margin: auto;
+
+} 
+
+.navbar-home {
+  color: white;
+}
+
+.navbar-items {
+  display: flex;
+  gap: 10px;
+}
+
+.navbar-items  a {
+  font-size: 17px;
+  color: white;
+  border-right: white 2px solid;
+  text-align: center;
+}
+
+.functionality-list {
+  margin: 15px;
+  padding: 5px 10px;
+}
+
+.functionality-list li {
+  margin: 20px 20px;
+}
+
+.form-submit-btn {
+  margin-top: 20px;
+  margin-bottom: 30px;
+  width: 180px;
+  border: 3px solid white;
+  border-radius: 6px;
+  padding: 5px 10px;
+  font-size: 20px;
+  background-color: #F7C873;
+  color: rgb(100, 100, 100);
+
+
+}
+
+
+
+
+
 .hero, .search-cards-section,
 .main-content {
   border: solid 4px #F7C873;
@@ -88,7 +165,7 @@ body {
   color: white;
   text-align: center;
   padding: 10px;
-  margin-top: 20px;
+  margin-top: 100px;
   width: 100%;
 }
 
@@ -168,7 +245,6 @@ article > input {
   text-align: left;
   padding-left: 100px;
   font-weight: bold;
-
 }
 
 .my-collection-container {
