--- a/mtg-collection/src/App.css
+++ b/mtg-collection/src/App.css
@@ -40,7 +40,6 @@ body {
   border-radius: 8px;
   margin: 10px;
   padding: 10px;
-
 }
 
 /* showing different layout on displays higher than 576px */
@@ -75,68 +74,41 @@ body {
   }
 }
 
+.navbar-container {
+  background-color:rgba(116, 44, 44, 0.781);
+  border-bottom: 3px solid #F7C873; 
+}
+
+.navbar {
+  width: 85%;
+  margin: 0 auto;
+  max-width: 1200px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 20px;
+  color: white;
+  
+}
+
+.navbar-item {
+  display: flex;
+  gap: 30px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
 .cards-container {
   margin: 10px;
   gap: 10px;
 }
 
-.navbar {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  display: flex;
-  height: 70px;
-  background-color:rgba(116, 44, 44, 0.781);
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 20px;
-  border-bottom: solid 4px #F7C873;
-}
-
-
-
-.navbar-home {
-  display: flex;
-}
-
-.navbar .navbar-icon {
-  width: 40px;
-  color: white;
-}
-
- .navbar a {
-  display: flex;
-  color: white;
-  font-size: 20px;
-  gap: 10px;
-  width: 80%;
-  margin: auto;
-
-} 
-
-.navbar-home {
-  color: white;
-}
-
-.navbar-items {
-  display: flex;
-  gap: 10px;
-}
-
-.navbar-items  a {
-  font-size: 17px;
-  color: white;
-  border-right: white 2px solid;
-  text-align: center;
-}
-
 .functionality-list {
   margin: 15px;
   padding: 5px 10px;
-}
-
-.functionality-list li {
-  margin: 20px 20px;
 }
 
 .form-submit-btn {
@@ -149,13 +121,7 @@ body {
   font-size: 20px;
   background-color: #F7C873;
   color: rgb(100, 100, 100);
-
-
 }
-
-
-
-
 
 .hero, .search-cards-section,
 .main-content {
@@ -165,7 +131,7 @@ body {
   color: white;
   text-align: center;
   padding: 10px;
-  margin-top: 100px;
+  margin-top: 50px;
   width: 100%;
 }
 
