--- a/mtg-collection/src/css/card-grid.css
+++ b/mtg-collection/src/css/card-grid.css
@@ -6,6 +6,13 @@
   gap: 7px;
 }
 
+.card-grid-container-title{
+  text-align: center;
+  color: white;
+  font-family: 'Jolly Lodger', sans-serif; 
+
+}
+
 .card-grid-title {
   margin-top: 20px;
   text-align: center;
@@ -41,4 +48,5 @@
   margin: 5px 10px;
   border-radius: 6px;
 }
+
 
